5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1638_2729.log
== TEST (2019-04-15 12:25:23) 
-- CODE:
a = int(input("digite seu numero: "))
b = int(input("digite seu numero"))

c = a*b

if (c // 2 == 0):
	print(a+b)
else:
	print(b-a)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:25:42) 
-- CODE:
a = int(input("digite seu numero: "))
b = int(input("digite seu numero: "))

c = a*b

if (c // 2 == 0):
	print(a+b)
else:
	print(b-a)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:25:51) 
-- CODE:
a = int(input("digite seu numero: "))
b = int(input("digite seu numero: "))

c = a*b

if (c // 2 == 0):
	print(a+b)
else:
	print(b-a)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:26:49) 
-- CODE:
a = int(input("digite seu numero: "))
b = int(input("digite seu numero: "))

c = a*b

if (c // 2 = 0):
	print(a+b)
else:
	print(b-a)
-- ERROR:
File "XXXX", line 6
    if (c // 2 = 0):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:27:28) 
-- CODE:
a = int(input("digite seu numero: "))
b = int(input("digite seu numero: "))

c = a*b

if (c % 2 == 0):
	print(a+b)
else:
	print(b-a)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:27:38) 
-- CODE:
a = int(input("digite seu numero: "))
b = int(input("digite seu numero: "))

c = a*b

if (c % 2 == 0):
	print(a+b)
else:
	print(b-a)
-- EXECUTION TIME:
0.139133
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
19
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
